Fix preview interface spacing

--- a/src/Styles/CSS/CopyButton.css
+++ b/src/Styles/CSS/CopyButton.css
@@ -2,7 +2,7 @@
     display: none;
     position: absolute;
     right: 10px;
-    bottom: 17px;
+    bottom: 10px;
     box-shadow: 2px 2px 7px black;
     cursor: pointer;
     border-radius: 25px;
