--- a/src/Styles/Preview/Center.css
+++ b/src/Styles/Preview/Center.css
@@ -1,24 +1,29 @@
 .center-container {
+    display: flex;
+    margin-left: 15px;
+    align-items: center;
+}
+.center-grid {
+    margin-left: 5px;
     display: grid;
     height: 40px;
     width: 40px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    margin-left: 20px;
     cursor: pointer;
 }
 
-.center-container-item {
+.center-grid-item {
     height: 100%;
     width: 100%;
     border: 0.5px solid var(--label-gray);
 }
 
-.center-container-item:hover {
+.center-grid-item:hover {
     background-color: var(--hover-gray);
 }
 
-.center-container-item-selected {
+.center-grid-item-selected {
     height: 100%;
     width: 100%;
     background-color: var(--hover-gray);
