--- a/src/Styles/Preview/Degrees.css
+++ b/src/Styles/Preview/Degrees.css
@@ -1,5 +1,5 @@
 .degrees-container {
-    margin-left: 20px;
+    margin-left: 15px;
     align-items: baseline;
     display: flex;
 }
