--- a/src/Styles/Preview/Dimensions.css
+++ b/src/Styles/Preview/Dimensions.css
@@ -1,7 +1,7 @@
 .dimensions-container {
     display: flex;
     align-items: baseline;
-    padding-right: 20px;
+    padding-right: 10px;
 }
 
 .dimensions-container {
